# helloOpenGL

./: .gitignore  CMakeLists.txt  README.md  rapport.md
OpenMesh/lib/: libOpenMeshTools.so.9.0
OpenMesh/libdata/pkgconfig/: openmesh.pc
glad/include/glad/: glad.h
glad/src/: glad.c
src/: Application.cpp  Application.hpp  demo.cpp  demo.hpp  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  myopenglwidget.cpp  opengldemo.cpp
src/AppM2S1/: Application.cpp  Application.hpp
src/hello_bezier/: hellobezier.cpp  hellobezier.h
src/hello_camera/: camera.cpp  camera.h  hellocamera.cpp  hellocamera.h
src/hello_triangles/: hellotriangles.cpp
src/lib/: BezierCurve.cpp  BezierCurve.hpp  Camera.cpp  Camera.hpp  EventHandler.cpp  EventHandler.hpp  RenderObject.cpp  RenderObject.hpp  Scene.hpp  ShaderManager.cpp  ShaderManager.hpp  ShaderProgram.cpp  ShaderProgram.hpp  Transform.cpp  Transform.hpp  camera.cpp  camera.hpp  material.hpp  mesh.cpp  mesh.hpp  moveable.hpp  renderer.cpp  renderer.hpp  texture.cpp  texture.hpp
src/lib/Animation/: Particle.cpp  Particle.hpp  ParticleSpawner.cpp  ParticleSpawner.hpp  Spring.cpp  Spring.hpp
src/lib/Geometry/: BezierCurve.cpp  BezierCurve.hpp  BezierSurface.cpp  BezierSurface.hpp  mesh.cpp  mesh.hpp  operations.cpp  operations.hpp
src/lib/Light/: DirectionalLight.cpp  DirectionalLight.hpp  Light.hpp  PointLight.cpp  PointLight.hpp  SpotLight.cpp  SpotLight.hpp
src/lib/Materials/: BlinnPhong.cpp  BlinnPhong.hpp  Material.cpp  Material.hpp  MetallicRought.cpp  MetallicRought.hpp  SimpleMaterial.cpp  SimpleMaterial.hpp
src/shaders/: blinnPhong.fs  blinnPhong.vs  brdfShader.fs  depthShader.fs  depthShader.vs  light.glsl  normalShader.fs  normalShader.vs  pointLight.glsl  simpleLightShader.vs  simpleShader.fs  simpleShader.vs  textureShader.fs  textureShader.vs  uvShader.vs
src/shaders/Lights/: directionalLight.glsl  light.glsl  pointLight.glsl  spotLight.glsl
src/shaders/Materials/: blinnPhong.fs  brdfShader.fs  brdfShader.vs  simpleShader.fs  simpleShader.vs
src/shaders/Utils/: ambient.fs  ambient.vs  black.fs  black.vs  depthShader.vs  normalShader.fs  normalShader.vs  shadowVolume.fs  shadowVolume.gs  shadowVolume.vs  uvShader.fs
